anal_semantricko/y.output
Grammar

    0 $accept: programa $end

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    2 inicioTabla: %empty

    3 escritura_TS: %empty

    4 end_funciones: %empty

    5 declaraciones: declaracion
    6              | declaracion declaraciones

    7 declaracion: clase identificadores TOK_PUNTOYCOMA

    8 clase: clase_escalar
    9      | clase_vector

   10 clase_escalar: tipo

   11 tipo: TOK_INT
   12     | TOK_BOOLEAN

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

   14 identificadores: identificador
   15                | identificador TOK_COMA identificadores

   16 funciones: funcion funciones
   17          | %empty

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA

   19 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

   21 parametros_funcion: parametro_funcion resto_parametros_funcion
   22                   | %empty

   23 resto_parametros_funcion: TOK_PUNTOYCOMA parametro_funcion resto_parametros_funcion
   24                         | %empty

   25 parametro_funcion: clase idpf

   26 idpf: TOK_IDENTIFICADOR

   27 declaraciones_funcion: declaraciones
   28                      | %empty

   29 sentencias: sentencia
   30           | sentencia sentencias

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA
   32          | bloque

   33 sentencia_simple: asignacion
   34                 | lectura
   35                 | escritura
   36                 | retorno_funcion

   37 bloque: condicional
   38       | bucle

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION exp
   40           | elemento_vector TOK_ASIGNACION exp

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

   42 condicional: if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   43            | if_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp

   45 bucle: bucle_exp TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

   46 bucle_exp: TOK_WHILE TOK_PARENTESISIZQUIERDO exp

   47 lectura: TOK_SCANF TOK_IDENTIFICADOR

   48 escritura: TOK_PRINTF exp

   49 retorno_funcion: TOK_RETURN exp

   50 exp: exp TOK_MAS exp
   51    | exp TOK_MENOS exp
   52    | exp TOK_DIVISION exp
   53    | exp TOK_ASTERISCO exp
   54    | TOK_MENOS exp
   55    | exp TOK_AND exp
   56    | exp TOK_OR exp
   57    | TOK_NOT exp
   58    | TOK_IDENTIFICADOR
   59    | constante
   60    | TOK_PARENTESISIZQUIERDO exp TOK_PARENTESISDERECHO
   61    | TOK_PARENTESISIZQUIERDO comparacion TOK_PARENTESISDERECHO
   62    | elemento_vector
   63    | idf_llamada_funcion TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

   64 idf_llamada_funcion: TOK_IDENTIFICADOR

   65 lista_expresiones: exp resto_lista_expresiones
   66                  | %empty

   67 resto_lista_expresiones: TOK_COMA exp resto_lista_expresiones
   68                        | %empty

   69 comparacion: exp TOK_IGUAL exp
   70            | exp TOK_DISTINTO exp
   71            | exp TOK_MENORIGUAL exp
   72            | exp TOK_MAYORIGUAL exp
   73            | exp TOK_MENOR exp
   74            | exp TOK_MAYOR exp

   75 constante: constante_logica
   76          | constante_entera

   77 constante_logica: TOK_TRUE
   78                 | TOK_FALSE

   79 constante_entera: TOK_CONSTANTE_ENTERA

   80 identificador: TOK_IDENTIFICADOR


Terminals, with rules where they appear

$end (0) 0
error (256)
TOK_MAIN (258) 1
TOK_INT (259) 11
TOK_BOOLEAN (260) 12
TOK_ARRAY (261) 13
TOK_FUNCTION (262) 19
TOK_IF (263) 44
TOK_ELSE (264) 43
TOK_WHILE (265) 46
TOK_SCANF (266) 47
TOK_PRINTF (267) 48
TOK_RETURN (268) 49
TOK_PUNTOYCOMA (269) 7 23 31
TOK_COMA (270) 15 67
TOK_PARENTESISIZQUIERDO (271) 20 44 46 60 61 63
TOK_PARENTESISDERECHO (272) 20 42 43 45 60 61 63
TOK_CORCHETEIZQUIERDO (273) 13 41
TOK_CORCHETEDERECHO (274) 13 41
TOK_LLAVEIZQUIERDA (275) 1 20 42 43 45
TOK_LLAVEDERECHA (276) 1 18 42 43 45
TOK_ASIGNACION (277) 39 40
TOK_MAS (278) 50
TOK_MENOS (279) 51 54
TOK_ASTERISCO (280) 53
TOK_DIVISION (281) 52
TOK_AND (282) 55
TOK_OR (283) 56
TOK_NOT (284) 57
TOK_IGUAL (285) 69
TOK_DISTINTO (286) 70
TOK_MENORIGUAL (287) 71
TOK_MAYORIGUAL (288) 72
TOK_MENOR (289) 73
TOK_MAYOR (290) 74
TOK_IDENTIFICADOR (291) 19 26 39 41 47 58 64 80
TOK_CONSTANTE_ENTERA (292) 13 79
TOK_TRUE (293) 77
TOK_FALSE (294) 78


Nonterminals, with rules where they appear

$accept (40)
    on left: 0
programa (41)
    on left: 1, on right: 0
inicioTabla (42)
    on left: 2, on right: 1
escritura_TS (43)
    on left: 3, on right: 1
end_funciones (44)
    on left: 4, on right: 1
declaraciones (45)
    on left: 5 6, on right: 1 6 27
declaracion (46)
    on left: 7, on right: 5 6
clase (47)
    on left: 8 9, on right: 7 25
clase_escalar (48)
    on left: 10, on right: 8
tipo (49)
    on left: 11 12, on right: 10 13 19
clase_vector (50)
    on left: 13, on right: 9
identificadores (51)
    on left: 14 15, on right: 7 15
funciones (52)
    on left: 16 17, on right: 1 16
funcion (53)
    on left: 18, on right: 16
fn_name (54)
    on left: 19, on right: 20
fn_declaration (55)
    on left: 20, on right: 18
parametros_funcion (56)
    on left: 21 22, on right: 20
resto_parametros_funcion (57)
    on left: 23 24, on right: 21 23
parametro_funcion (58)
    on left: 25, on right: 21 23
idpf (59)
    on left: 26, on right: 25
declaraciones_funcion (60)
    on left: 27 28, on right: 20
sentencias (61)
    on left: 29 30, on right: 1 18 30 42 43 45
sentencia (62)
    on left: 31 32, on right: 29 30
sentencia_simple (63)
    on left: 33 34 35 36, on right: 31
bloque (64)
    on left: 37 38, on right: 32
asignacion (65)
    on left: 39 40, on right: 33
elemento_vector (66)
    on left: 41, on right: 40 62
condicional (67)
    on left: 42 43, on right: 37
if_exp (68)
    on left: 44, on right: 42 43
bucle (69)
    on left: 45, on right: 38
bucle_exp (70)
    on left: 46, on right: 45
lectura (71)
    on left: 47, on right: 34
escritura (72)
    on left: 48, on right: 35
retorno_funcion (73)
    on left: 49, on right: 36
exp (74)
    on left: 50 51 52 53 54 55 56 57 58 59 60 61 62 63, on right: 39
    40 41 44 46 48 49 50 51 52 53 54 55 56 57 60 65 67 69 70 71 72
    73 74
idf_llamada_funcion (75)
    on left: 64, on right: 63
lista_expresiones (76)
    on left: 65 66, on right: 63
resto_lista_expresiones (77)
    on left: 67 68, on right: 65 67
comparacion (78)
    on left: 69 70 71 72 73 74, on right: 61
constante (79)
    on left: 75 76, on right: 59
constante_logica (80)
    on left: 77 78, on right: 75
constante_entera (81)
    on left: 79, on right: 76
identificador (82)
    on left: 80, on right: 14 15


State 0

    0 $accept: . programa $end

    $default  reduce using rule 2 (inicioTabla)

    programa     go to state 1
    inicioTabla  go to state 2


State 1

    0 $accept: programa . $end

    $end  shift, and go to state 3


State 2

    1 programa: inicioTabla . TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_MAIN  shift, and go to state 4


State 3

    0 $accept: programa $end .

    $default  accept


State 4

    1 programa: inicioTabla TOK_MAIN . TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 5


State 5

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA . declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    declaraciones  go to state 9
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 6

   11 tipo: TOK_INT .

    $default  reduce using rule 11 (tipo)


State 7

   12 tipo: TOK_BOOLEAN .

    $default  reduce using rule 12 (tipo)


State 8

   13 clase_vector: TOK_ARRAY . tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 15


State 9

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones . escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 3 (escritura_TS)

    escritura_TS  go to state 16


State 10

    5 declaraciones: declaracion .
    6              | declaracion . declaraciones

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 5 (declaraciones)

    declaraciones  go to state 17
    declaracion    go to state 10
    clase          go to state 11
    clase_escalar  go to state 12
    tipo           go to state 13
    clase_vector   go to state 14


State 11

    7 declaracion: clase . identificadores TOK_PUNTOYCOMA

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 19
    identificador    go to state 20


State 12

    8 clase: clase_escalar .

    $default  reduce using rule 8 (clase)


State 13

   10 clase_escalar: tipo .

    $default  reduce using rule 10 (clase_escalar)


State 14

    9 clase: clase_vector .

    $default  reduce using rule 9 (clase)


State 15

   13 clase_vector: TOK_ARRAY tipo . TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 21


State 16

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS . funciones end_funciones sentencias TOK_LLAVEDERECHA

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 23
    funcion         go to state 24
    fn_name         go to state 25
    fn_declaration  go to state 26


State 17

    6 declaraciones: declaracion declaraciones .

    $default  reduce using rule 6 (declaraciones)


State 18

   80 identificador: TOK_IDENTIFICADOR .

    $default  reduce using rule 80 (identificador)


State 19

    7 declaracion: clase identificadores . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 27


State 20

   14 identificadores: identificador .
   15                | identificador . TOK_COMA identificadores

    TOK_COMA  shift, and go to state 28

    $default  reduce using rule 14 (identificadores)


State 21

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO . TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO

    TOK_CONSTANTE_ENTERA  shift, and go to state 29


State 22

   19 fn_name: TOK_FUNCTION . tipo TOK_IDENTIFICADOR

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7

    tipo  go to state 30


State 23

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones . end_funciones sentencias TOK_LLAVEDERECHA

    $default  reduce using rule 4 (end_funciones)

    end_funciones  go to state 31


State 24

   16 funciones: funcion . funciones

    TOK_FUNCTION  shift, and go to state 22

    $default  reduce using rule 17 (funciones)

    funciones       go to state 32
    funcion         go to state 24
    fn_name         go to state 25
    fn_declaration  go to state 26


State 25

   20 fn_declaration: fn_name . TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISIZQUIERDO  shift, and go to state 33


State 26

   18 funcion: fn_declaration . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 34
    TOK_WHILE          shift, and go to state 35
    TOK_SCANF          shift, and go to state 36
    TOK_PRINTF         shift, and go to state 37
    TOK_RETURN         shift, and go to state 38
    TOK_IDENTIFICADOR  shift, and go to state 39

    sentencias        go to state 40
    sentencia         go to state 41
    sentencia_simple  go to state 42
    bloque            go to state 43
    asignacion        go to state 44
    elemento_vector   go to state 45
    condicional       go to state 46
    if_exp            go to state 47
    bucle             go to state 48
    bucle_exp         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 27

    7 declaracion: clase identificadores TOK_PUNTOYCOMA .

    $default  reduce using rule 7 (declaracion)


State 28

   15 identificadores: identificador TOK_COMA . identificadores

    TOK_IDENTIFICADOR  shift, and go to state 18

    identificadores  go to state 53
    identificador    go to state 20


State 29

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA . TOK_CORCHETEDERECHO

    TOK_CORCHETEDERECHO  shift, and go to state 54


State 30

   19 fn_name: TOK_FUNCTION tipo . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 55


State 31

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones . sentencias TOK_LLAVEDERECHA

    TOK_IF             shift, and go to state 34
    TOK_WHILE          shift, and go to state 35
    TOK_SCANF          shift, and go to state 36
    TOK_PRINTF         shift, and go to state 37
    TOK_RETURN         shift, and go to state 38
    TOK_IDENTIFICADOR  shift, and go to state 39

    sentencias        go to state 56
    sentencia         go to state 41
    sentencia_simple  go to state 42
    bloque            go to state 43
    asignacion        go to state 44
    elemento_vector   go to state 45
    condicional       go to state 46
    if_exp            go to state 47
    bucle             go to state 48
    bucle_exp         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 32

   16 funciones: funcion funciones .

    $default  reduce using rule 16 (funciones)


State 33

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO . parametros_funcion TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    $default  reduce using rule 22 (parametros_funcion)

    clase               go to state 57
    clase_escalar       go to state 12
    tipo                go to state 13
    clase_vector        go to state 14
    parametros_funcion  go to state 58
    parametro_funcion   go to state 59


State 34

   44 if_exp: TOK_IF . TOK_PARENTESISIZQUIERDO exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 60


State 35

   46 bucle_exp: TOK_WHILE . TOK_PARENTESISIZQUIERDO exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 61


State 36

   47 lectura: TOK_SCANF . TOK_IDENTIFICADOR

    TOK_IDENTIFICADOR  shift, and go to state 62


State 37

   48 escritura: TOK_PRINTF . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 71
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 38

   49 retorno_funcion: TOK_RETURN . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 76
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 39

   39 asignacion: TOK_IDENTIFICADOR . TOK_ASIGNACION exp
   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO

    TOK_CORCHETEIZQUIERDO  shift, and go to state 77
    TOK_ASIGNACION         shift, and go to state 78


State 40

   18 funcion: fn_declaration sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 79


State 41

   29 sentencias: sentencia .
   30           | sentencia . sentencias

    TOK_IF             shift, and go to state 34
    TOK_WHILE          shift, and go to state 35
    TOK_SCANF          shift, and go to state 36
    TOK_PRINTF         shift, and go to state 37
    TOK_RETURN         shift, and go to state 38
    TOK_IDENTIFICADOR  shift, and go to state 39

    $default  reduce using rule 29 (sentencias)

    sentencias        go to state 80
    sentencia         go to state 41
    sentencia_simple  go to state 42
    bloque            go to state 43
    asignacion        go to state 44
    elemento_vector   go to state 45
    condicional       go to state 46
    if_exp            go to state 47
    bucle             go to state 48
    bucle_exp         go to state 49
    lectura           go to state 50
    escritura         go to state 51
    retorno_funcion   go to state 52


State 42

   31 sentencia: sentencia_simple . TOK_PUNTOYCOMA

    TOK_PUNTOYCOMA  shift, and go to state 81


State 43

   32 sentencia: bloque .

    $default  reduce using rule 32 (sentencia)


State 44

   33 sentencia_simple: asignacion .

    $default  reduce using rule 33 (sentencia_simple)


State 45

   40 asignacion: elemento_vector . TOK_ASIGNACION exp

    TOK_ASIGNACION  shift, and go to state 82


State 46

   37 bloque: condicional .

    $default  reduce using rule 37 (bloque)


State 47

   42 condicional: if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   43            | if_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 83


State 48

   38 bloque: bucle .

    $default  reduce using rule 38 (bloque)


State 49

   45 bucle: bucle_exp . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_PARENTESISDERECHO  shift, and go to state 84


State 50

   34 sentencia_simple: lectura .

    $default  reduce using rule 34 (sentencia_simple)


State 51

   35 sentencia_simple: escritura .

    $default  reduce using rule 35 (sentencia_simple)


State 52

   36 sentencia_simple: retorno_funcion .

    $default  reduce using rule 36 (sentencia_simple)


State 53

   15 identificadores: identificador TOK_COMA identificadores .

    $default  reduce using rule 15 (identificadores)


State 54

   13 clase_vector: TOK_ARRAY tipo TOK_CORCHETEIZQUIERDO TOK_CONSTANTE_ENTERA TOK_CORCHETEDERECHO .

    $default  reduce using rule 13 (clase_vector)


State 55

   19 fn_name: TOK_FUNCTION tipo TOK_IDENTIFICADOR .

    $default  reduce using rule 19 (fn_name)


State 56

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias . TOK_LLAVEDERECHA

    TOK_LLAVEDERECHA  shift, and go to state 85


State 57

   25 parametro_funcion: clase . idpf

    TOK_IDENTIFICADOR  shift, and go to state 86

    idpf  go to state 87


State 58

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion . TOK_PARENTESISDERECHO TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_PARENTESISDERECHO  shift, and go to state 88


State 59

   21 parametros_funcion: parametro_funcion . resto_parametros_funcion

    TOK_PUNTOYCOMA  shift, and go to state 89

    $default  reduce using rule 24 (resto_parametros_funcion)

    resto_parametros_funcion  go to state 90


State 60

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 91
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 61

   46 bucle_exp: TOK_WHILE TOK_PARENTESISIZQUIERDO . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 92
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 62

   47 lectura: TOK_SCANF TOK_IDENTIFICADOR .

    $default  reduce using rule 47 (lectura)


State 63

   60 exp: TOK_PARENTESISIZQUIERDO . exp TOK_PARENTESISDERECHO
   61    | TOK_PARENTESISIZQUIERDO . comparacion TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 93
    idf_llamada_funcion  go to state 72
    comparacion          go to state 94
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 64

   54 exp: TOK_MENOS . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 95
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 65

   57 exp: TOK_NOT . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 96
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 66

   41 elemento_vector: TOK_IDENTIFICADOR . TOK_CORCHETEIZQUIERDO exp TOK_CORCHETEDERECHO
   58 exp: TOK_IDENTIFICADOR .
   64 idf_llamada_funcion: TOK_IDENTIFICADOR .

    TOK_CORCHETEIZQUIERDO  shift, and go to state 77

    TOK_PARENTESISIZQUIERDO  reduce using rule 64 (idf_llamada_funcion)
    $default                 reduce using rule 58 (exp)


State 67

   79 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce using rule 79 (constante_entera)


State 68

   77 constante_logica: TOK_TRUE .

    $default  reduce using rule 77 (constante_logica)


State 69

   78 constante_logica: TOK_FALSE .

    $default  reduce using rule 78 (constante_logica)


State 70

   62 exp: elemento_vector .

    $default  reduce using rule 62 (exp)


State 71

   48 escritura: TOK_PRINTF exp .
   50 exp: exp . TOK_MAS exp
   51    | exp . TOK_MENOS exp
   52    | exp . TOK_DIVISION exp
   53    | exp . TOK_ASTERISCO exp
   55    | exp . TOK_AND exp
   56    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 97
    TOK_MENOS      shift, and go to state 98
    TOK_ASTERISCO  shift, and go to state 99
    TOK_DIVISION   shift, and go to state 100
    TOK_AND        shift, and go to state 101
    TOK_OR         shift, and go to state 102

    $default  reduce using rule 48 (escritura)


State 72

   63 exp: idf_llamada_funcion . TOK_PARENTESISIZQUIERDO lista_expresiones TOK_PARENTESISDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 103


State 73

   59 exp: constante .

    $default  reduce using rule 59 (exp)


State 74

   75 constante: constante_logica .

    $default  reduce using rule 75 (constante)


State 75

   76 constante: constante_entera .

    $default  reduce using rule 76 (constante)


State 76

   49 retorno_funcion: TOK_RETURN exp .
   50 exp: exp . TOK_MAS exp
   51    | exp . TOK_MENOS exp
   52    | exp . TOK_DIVISION exp
   53    | exp . TOK_ASTERISCO exp
   55    | exp . TOK_AND exp
   56    | exp . TOK_OR exp

    TOK_MAS        shift, and go to state 97
    TOK_MENOS      shift, and go to state 98
    TOK_ASTERISCO  shift, and go to state 99
    TOK_DIVISION   shift, and go to state 100
    TOK_AND        shift, and go to state 101
    TOK_OR         shift, and go to state 102

    $default  reduce using rule 49 (retorno_funcion)


State 77

   41 elemento_vector: TOK_IDENTIFICADOR TOK_CORCHETEIZQUIERDO . exp TOK_CORCHETEDERECHO

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 104
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 78

   39 asignacion: TOK_IDENTIFICADOR TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 105
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 79

   18 funcion: fn_declaration sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 18 (funcion)


State 80

   30 sentencias: sentencia sentencias .

    $default  reduce using rule 30 (sentencias)


State 81

   31 sentencia: sentencia_simple TOK_PUNTOYCOMA .

    $default  reduce using rule 31 (sentencia)


State 82

   40 asignacion: elemento_vector TOK_ASIGNACION . exp

    TOK_PARENTESISIZQUIERDO  shift, and go to state 63
    TOK_MENOS                shift, and go to state 64
    TOK_NOT                  shift, and go to state 65
    TOK_IDENTIFICADOR        shift, and go to state 66
    TOK_CONSTANTE_ENTERA     shift, and go to state 67
    TOK_TRUE                 shift, and go to state 68
    TOK_FALSE                shift, and go to state 69

    elemento_vector      go to state 70
    exp                  go to state 106
    idf_llamada_funcion  go to state 72
    constante            go to state 73
    constante_logica     go to state 74
    constante_entera     go to state 75


State 83

   42 condicional: if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA
   43            | if_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA TOK_ELSE TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 107


State 84

   45 bucle: bucle_exp TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA sentencias TOK_LLAVEDERECHA

    TOK_LLAVEIZQUIERDA  shift, and go to state 108


State 85

    1 programa: inicioTabla TOK_MAIN TOK_LLAVEIZQUIERDA declaraciones escritura_TS funciones end_funciones sentencias TOK_LLAVEDERECHA .

    $default  reduce using rule 1 (programa)


State 86

   26 idpf: TOK_IDENTIFICADOR .

    $default  reduce using rule 26 (idpf)


State 87

   25 parametro_funcion: clase idpf .

    $default  reduce using rule 25 (parametro_funcion)


State 88

   20 fn_declaration: fn_name TOK_PARENTESISIZQUIERDO parametros_funcion TOK_PARENTESISDERECHO . TOK_LLAVEIZQUIERDA declaraciones_funcion

    TOK_LLAVEIZQUIERDA  shift, and go to state 109


State 89

   23 resto_parametros_funcion: TOK_PUNTOYCOMA . parametro_funcion resto_parametros_funcion

    TOK_INT      shift, and go to state 6
    TOK_BOOLEAN  shift, and go to state 7
    TOK_ARRAY    shift, and go to state 8

    clase              go to state 57
    clase_escalar      go to state 12
    tipo               go to state 13
    clase_vector       go to state 14
    parametro_funcion  go to state 110


State 90

   21 parametros_funcion: parametro_funcion resto_parametros_funcion .

    $default  reduce using rule 21 (parametros_funcion)


State 91

   44 if_exp: TOK_IF TOK_PARENTESISIZQUIERDO exp .
   50 exp: exp . TOK_MAS exp
   51    | exp . TOK_MENOS exp
   52    | exp . TOK_DIVISION exp
   53    | exp . TOK_ASTERISCO exp
   55    | exp . TOK_AND exp
   56    | exp . TOK_OR exp
